# PulseDroidRtp

./: .gitmodules  README.md  build.gradle  settings.gradle
app/: .gitignore  build.gradle
app/src/androidTest/java/me/wenxinwang/pulsedroidrtp/: ExampleInstrumentedTest.java
app/src/androidTest/java/me/wenxinwang/revivexiaoxun/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  OboeEngine.cpp  OboeEngine.h  PulseRtpOboeEngine.cpp  PulseRtpOboeEngine.h  jni_bridge.cpp
app/src/main/java/me/wenxinwang/pulsedroidrtp/: MainActivity.java  MainActivity.kt  PulseRtpAudioEngine.java  PulseRtpAudioEngine.kt  PulseRtpAudioService.kt
app/src/main/java/me/wenxinwang/revivexiaoxun/: AudioEngine.java  MainActivity.java  PulseRtpAudioEngine.java
app/src/main/res/drawable/: ic_launcher_background.xml  ic_launcher_foreground.xml
app/src/main/res/drawable-v24/: ic_launcher_foreground.xml
app/src/main/res/layout/: activity_main.xml  latency_spinner.xml
app/src/main/res/values/: dimens.xml  ic_launcher_background.xml  strings.xml
app/src/test/java/me/wenxinwang/pulsedroidrtp/: ExampleUnitTest.java
app/src/test/java/me/wenxinwang/revivexiaoxun/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
